[gd_scene load_steps=63 format=3 uid="uid://c4naigkk10ri6"]

[ext_resource type="Script" path="res://player/player.gd" id="1_yo1nn"]
[ext_resource type="Texture2D" uid="uid://bbv7rd80vdo7t" path="res://assets/grid_texture.png" id="2_ejvxo"]
[ext_resource type="Script" path="res://scenes/Game/reach_cone.gd" id="2_vmowd"]
[ext_resource type="Texture2D" uid="uid://f7g23n3848ke" path="res://assets/Textures/Rocks_Diffuse.png" id="3_0lla4"]
[ext_resource type="Script" path="res://scripts/ItemPickup.gd" id="3_ctpq8"]
[ext_resource type="ArrayMesh" uid="uid://bw474cm3w6asi" path="res://assets/OBJ/CommonTree_5.obj" id="8_t7r08"]
[ext_resource type="Texture2D" uid="uid://bgvqn7nh43754" path="res://assets/Textures/Bark_NormalTree.png" id="10_iiikt"]
[ext_resource type="Texture2D" uid="uid://bf0s50y2bvpbf" path="res://assets/Textures/Leaves_NormalTree_C.png" id="10_wbgnv"]
[ext_resource type="Texture2D" uid="uid://b3quy5coy3qr8" path="res://assets/Textures/Leaves_GiantPine_C.png" id="11_xfvju"]
[ext_resource type="Texture2D" uid="uid://ba12hfgj66i1f" path="res://assets/Textures/Bark_TwistedTree.png" id="12_ljcka"]
[ext_resource type="Texture2D" uid="uid://c6iqtkc6j6tlw" path="res://assets/Textures/PathRocks_Diffuse.png" id="12_xsg2x"]
[ext_resource type="ArrayMesh" uid="uid://bajfbs7f3ihbp" path="res://assets/OBJ/RockPath_Round_Small_1.obj" id="13_ocs1n"]
[ext_resource type="ArrayMesh" uid="uid://dutrqyp67vvop" path="res://assets/OBJ/RockPath_Round_Wide.obj" id="14_7i2hs"]
[ext_resource type="ArrayMesh" uid="uid://b205wmbkmtgo2" path="res://assets/OBJ/TwistedTree_2.obj" id="15_6jf0n"]
[ext_resource type="Texture2D" uid="uid://embmc382bg7t" path="res://assets/Textures/Flowers.png" id="16_4s24o"]
[ext_resource type="Texture2D" uid="uid://bf3x5xhwwvnbk" path="res://assets/Textures/Mushrooms.png" id="17_exhml"]
[ext_resource type="ArrayMesh" uid="uid://wywmff2e6mtv" path="res://assets/OBJ/Petal_1.obj" id="17_p1pwq"]

[sub_resource type="BoxShape3D" id="BoxShape3D_g4kgf"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_wsf45"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_cemht"]

[sub_resource type="CylinderMesh" id="CylinderMesh_a2oat"]

[sub_resource type="BoxShape3D" id="BoxShape3D_tdgyr"]
size = Vector3(250, 1, 250)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_28juv"]
albedo_texture = ExtResource("3_0lla4")

[sub_resource type="BoxMesh" id="BoxMesh_5waxb"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kdkoc"]
shading_mode = 0
albedo_color = Color(0.245835, 0.378884, 0.0869614, 1)
albedo_texture = ExtResource("2_ejvxo")
uv1_scale = Vector3(55, 55, 55)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_uaqqw"]
albedo_texture = ExtResource("10_iiikt")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0w1sr"]
albedo_texture = ExtResource("11_xfvju")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ghafv"]
albedo_texture = ExtResource("12_xsg2x")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xa2lc"]
albedo_texture = ExtResource("12_xsg2x")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wuxxg"]
albedo_texture = ExtResource("12_xsg2x")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cedoq"]
albedo_texture = ExtResource("12_xsg2x")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mr8sw"]
albedo_texture = ExtResource("12_ljcka")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lgtwv"]
albedo_texture = ExtResource("10_wbgnv")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wd2vj"]
albedo_texture = ExtResource("16_4s24o")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kro4y"]
albedo_texture = ExtResource("3_0lla4")

[sub_resource type="BoxMesh" id="BoxMesh_qxlty"]

[sub_resource type="BoxShape3D" id="BoxShape3D_dspdu"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nqrmg"]
albedo_texture = ExtResource("3_0lla4")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0x5sy"]
albedo_texture = ExtResource("3_0lla4")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_habnk"]
albedo_texture = ExtResource("3_0lla4")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jul4f"]
albedo_texture = ExtResource("3_0lla4")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wsph2"]
albedo_texture = ExtResource("10_iiikt")

[sub_resource type="CylinderMesh" id="CylinderMesh_or1u5"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_il0nj"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_h5vqx"]
albedo_texture = ExtResource("10_iiikt")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ptrgv"]
albedo_texture = ExtResource("10_iiikt")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1gekh"]
albedo_texture = ExtResource("10_iiikt")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hapsq"]
albedo_texture = ExtResource("10_iiikt")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7xnfn"]
albedo_texture = ExtResource("10_iiikt")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gpd55"]
albedo_texture = ExtResource("10_iiikt")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1ixcp"]
albedo_texture = ExtResource("10_iiikt")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_22nuw"]
albedo_texture = ExtResource("16_4s24o")

[sub_resource type="PrismMesh" id="PrismMesh_ls1ci"]

[sub_resource type="BoxShape3D" id="BoxShape3D_fnniw"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wmp3i"]
albedo_texture = ExtResource("16_4s24o")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1d6vt"]
albedo_texture = ExtResource("16_4s24o")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hywgi"]
albedo_texture = ExtResource("17_exhml")

[sub_resource type="TorusMesh" id="TorusMesh_ai0to"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_kb0wj"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lybqf"]
albedo_texture = ExtResource("17_exhml")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3ukbj"]
albedo_texture = ExtResource("17_exhml")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lauq3"]
albedo_texture = ExtResource("17_exhml")

[node name="GameWorld" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.694132, 17.1793, 0.241933)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.821149, 0.570714, 0, -0.570714, 0.821149, 0, 6.36461, 7.25033)
shadow_enabled = true

[node name="Player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.336783, 0)
script = ExtResource("1_yo1nn")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 2, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("BoxShape3D_g4kgf")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.929745, 0)
gi_mode = 2
mesh = SubResource("CapsuleMesh_wsf45")

[node name="Head" type="Node3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)

[node name="CameraPivot" type="SpringArm3D" parent="Player/Head"]
transform = Transform3D(1, 0, 0, 0, 0.978148, 0.207912, 0, -0.207912, 0.978148, 1, 0.2, 0)
spring_length = 4.0

[node name="Camera3D" type="Camera3D" parent="Player/Head/CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.19563, 0.0415823)
current = true
fov = 90.0

[node name="InteractRay" type="RayCast3D" parent="Player/Head"]
transform = Transform3D(1, 0, 0, 0, 0.978148, 0.207912, 0, -0.207912, 0.978148, 0, -0.0224872, 5.96046e-07)
enabled = false
target_position = Vector3(0, 0, -3)
debug_shape_custom_color = Color(0.909184, 0, 0.2528, 1)
debug_shape_thickness = 5

[node name="ReachCast" type="ShapeCast3D" parent="Player/Head"]
shape = SubResource("ConvexPolygonShape3D_cemht")
debug_shape_custom_color = Color(0.828542, 0, 0.477452, 1)

[node name="ReachCone" type="MeshInstance3D" parent="Player/Head/ReachCast"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -0.625)
visible = false
mesh = SubResource("CylinderMesh_a2oat")
script = ExtResource("2_vmowd")

[node name="Floor" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
shape = SubResource("BoxShape3D_tdgyr")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor"]
transform = Transform3D(-250, 8.74228e-08, 0, -2.18557e-05, -1, 0, 0, 0, 250, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_28juv")
mesh = SubResource("BoxMesh_5waxb")
surface_material_override/0 = SubResource("StandardMaterial3D_kdkoc")

[node name="CommonTree5" type="MeshInstance3D" parent="Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.09119, 0.5, 16.6468)
mesh = ExtResource("8_t7r08")
surface_material_override/0 = SubResource("StandardMaterial3D_uaqqw")
surface_material_override/1 = SubResource("StandardMaterial3D_0w1sr")

[node name="RockPathRoundSmall1" type="MeshInstance3D" parent="Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.746032, 0.5, 8.29452)
material_override = SubResource("StandardMaterial3D_ghafv")
mesh = ExtResource("13_ocs1n")

[node name="RockPathRoundWide" type="MeshInstance3D" parent="Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.46852, 0.5, 3.79068)
material_override = SubResource("StandardMaterial3D_xa2lc")
mesh = ExtResource("14_7i2hs")

[node name="RockPathRoundWide2" type="MeshInstance3D" parent="Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.46852, 0.5, 1.76465)
material_override = SubResource("StandardMaterial3D_wuxxg")
mesh = ExtResource("14_7i2hs")

[node name="RockPathRoundWide3" type="MeshInstance3D" parent="Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.46852, 0.5, -0.246616)
material_override = SubResource("StandardMaterial3D_cedoq")
mesh = ExtResource("14_7i2hs")

[node name="TwistedTree2" type="MeshInstance3D" parent="Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.86909, 0.5, 5.73639)
mesh = ExtResource("15_6jf0n")
surface_material_override/0 = SubResource("StandardMaterial3D_mr8sw")
surface_material_override/1 = SubResource("StandardMaterial3D_lgtwv")

[node name="Petal1" type="MeshInstance3D" parent="Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.04216, 0.5, 8.15938)
material_override = SubResource("StandardMaterial3D_wd2vj")
mesh = ExtResource("17_p1pwq")

[node name="Stone_1" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.41991, 1.37265, -7.79687)
mass = 4.0
script = ExtResource("3_ctpq8")
item_id = "stone"

[node name="MeshInstance3D" type="MeshInstance3D" parent="Stone_1"]
material_override = SubResource("StandardMaterial3D_kro4y")
mesh = SubResource("BoxMesh_qxlty")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Stone_1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.38419e-07, 0, 0)
shape = SubResource("BoxShape3D_dspdu")

[node name="Stone_2" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.9904, 1.37265, -7.79687)
mass = 6.0
script = ExtResource("3_ctpq8")
item_id = "stone"

[node name="MeshInstance3D" type="MeshInstance3D" parent="Stone_2"]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_nqrmg")
mesh = SubResource("BoxMesh_qxlty")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Stone_2"]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 2.38419e-07, 0, 0)
shape = SubResource("BoxShape3D_dspdu")

[node name="Stone_3" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.99931, 1.37265, -5.55885)
mass = 6.0
script = ExtResource("3_ctpq8")
item_id = "stone"

[node name="MeshInstance3D" type="MeshInstance3D" parent="Stone_3"]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_0x5sy")
mesh = SubResource("BoxMesh_qxlty")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Stone_3"]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 2.38419e-07, 0, 0)
shape = SubResource("BoxShape3D_dspdu")

[node name="Stone_4" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.00231, 1.37265, -5.55885)
mass = 6.0
script = ExtResource("3_ctpq8")
item_id = "stone"

[node name="MeshInstance3D" type="MeshInstance3D" parent="Stone_4"]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_habnk")
mesh = SubResource("BoxMesh_qxlty")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Stone_4"]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 2.38419e-07, 0, 0)
shape = SubResource("BoxShape3D_dspdu")

[node name="Stone_5" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.44977, 1.37265, -9.82112)
mass = 4.0
script = ExtResource("3_ctpq8")
item_id = "stone"

[node name="MeshInstance3D" type="MeshInstance3D" parent="Stone_5"]
material_override = SubResource("StandardMaterial3D_jul4f")
mesh = SubResource("BoxMesh_qxlty")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Stone_5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.38419e-07, 0, 0)
shape = SubResource("BoxShape3D_dspdu")

[node name="Wood_1" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.2878, 2.73634, -11.2395)
mass = 4.0
script = ExtResource("3_ctpq8")
item_id = "wood"

[node name="MeshInstance3D" type="MeshInstance3D" parent="Wood_1"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, -1.5, 0)
material_override = SubResource("StandardMaterial3D_wsph2")
mesh = SubResource("CylinderMesh_or1u5")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Wood_1"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, -1.5, 0)
shape = SubResource("CylinderShape3D_il0nj")

[node name="Wood_2" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.54015, 2.73634, -11.2395)
mass = 4.0
script = ExtResource("3_ctpq8")
item_id = "wood"

[node name="MeshInstance3D" type="MeshInstance3D" parent="Wood_2"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, -1.5, 0)
material_override = SubResource("StandardMaterial3D_h5vqx")
mesh = SubResource("CylinderMesh_or1u5")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Wood_2"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, -1.5, 0)
shape = SubResource("CylinderShape3D_il0nj")

[node name="Wood_3" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.54015, 2.73634, -6.15046)
mass = 4.0
script = ExtResource("3_ctpq8")
item_id = "wood"

[node name="MeshInstance3D" type="MeshInstance3D" parent="Wood_3"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, -1.5, 0)
material_override = SubResource("StandardMaterial3D_ptrgv")
mesh = SubResource("CylinderMesh_or1u5")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Wood_3"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, -1.5, 0)
shape = SubResource("CylinderShape3D_il0nj")

[node name="Wood_4" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.41209, 2.73634, -6.15046)
mass = 4.0
script = ExtResource("3_ctpq8")
item_id = "wood"

[node name="MeshInstance3D" type="MeshInstance3D" parent="Wood_4"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, -1.5, 0)
material_override = SubResource("StandardMaterial3D_1gekh")
mesh = SubResource("CylinderMesh_or1u5")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Wood_4"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, -1.5, 0)
shape = SubResource("CylinderShape3D_il0nj")

[node name="Wood_5" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.41209, 2.73634, -9.04487)
mass = 4.0
script = ExtResource("3_ctpq8")
item_id = "wood"

[node name="MeshInstance3D" type="MeshInstance3D" parent="Wood_5"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, -1.5, 0)
material_override = SubResource("StandardMaterial3D_hapsq")
mesh = SubResource("CylinderMesh_or1u5")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Wood_5"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, -1.5, 0)
shape = SubResource("CylinderShape3D_il0nj")

[node name="Wood_6" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.3674, 2.73634, -10.3952)
mass = 4.0
script = ExtResource("3_ctpq8")
item_id = "wood"

[node name="MeshInstance3D" type="MeshInstance3D" parent="Wood_6"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, -1.5, 0)
material_override = SubResource("StandardMaterial3D_7xnfn")
mesh = SubResource("CylinderMesh_or1u5")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Wood_6"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, -1.5, 0)
shape = SubResource("CylinderShape3D_il0nj")

[node name="Wood_7" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.81447, 2.73634, -14.4732)
mass = 4.0
script = ExtResource("3_ctpq8")
item_id = "wood"

[node name="MeshInstance3D" type="MeshInstance3D" parent="Wood_7"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, -1.5, 0)
material_override = SubResource("StandardMaterial3D_gpd55")
mesh = SubResource("CylinderMesh_or1u5")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Wood_7"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, -1.5, 0)
shape = SubResource("CylinderShape3D_il0nj")

[node name="Wood_8" type="RigidBody3D" parent="."]
transform = Transform3D(0.541576, 0, -0.840652, 0, 1, 0, 0.840652, 0, 0.541576, 8.81447, 4.2395, -10.1553)
mass = 4.0
script = ExtResource("3_ctpq8")
item_id = "wood"

[node name="MeshInstance3D" type="MeshInstance3D" parent="Wood_8"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, -1.5, 0)
material_override = SubResource("StandardMaterial3D_1ixcp")
mesh = SubResource("CylinderMesh_or1u5")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Wood_8"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, -1.5, 0)
shape = SubResource("CylinderShape3D_il0nj")

[node name="Fish_1" type="RigidBody3D" parent="."]
transform = Transform3D(0.541576, 0, -0.840652, 0, 1, 0, 0.840652, 0, 0.541576, 10.9631, 4.2395, 0.410938)
mass = 4.0
script = ExtResource("3_ctpq8")
item_id = "fish"

[node name="MeshInstance3D" type="MeshInstance3D" parent="Fish_1"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, -1.5, 0)
material_override = SubResource("StandardMaterial3D_22nuw")
mesh = SubResource("PrismMesh_ls1ci")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Fish_1"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.77636e-15, 0, 1, 0, -1.5, 0)
shape = SubResource("BoxShape3D_fnniw")

[node name="Fish_2" type="RigidBody3D" parent="."]
transform = Transform3D(0.541576, 0, -0.840652, 0, 1, 0, 0.840652, 0, 0.541576, 10.9631, 4.2395, 0.410938)
mass = 4.0
script = ExtResource("3_ctpq8")
item_id = "fish"

[node name="MeshInstance3D" type="MeshInstance3D" parent="Fish_2"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, -1.5, 0)
mesh = SubResource("PrismMesh_ls1ci")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Fish_2"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.77636e-15, 0, 1, 0, -1.5, 0)
shape = SubResource("BoxShape3D_fnniw")

[node name="Fish_3" type="RigidBody3D" parent="."]
transform = Transform3D(0.541576, 0, -0.840652, 0, 1, 0, 0.840652, 0, 0.541576, 9.59725, 4.2395, 1.52662)
mass = 4.0
script = ExtResource("3_ctpq8")
item_id = "fish"

[node name="MeshInstance3D" type="MeshInstance3D" parent="Fish_3"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, -1.5, 0)
material_override = SubResource("StandardMaterial3D_wmp3i")
mesh = SubResource("PrismMesh_ls1ci")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Fish_3"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.77636e-15, 0, 1, 0, -1.5, 0)
shape = SubResource("BoxShape3D_fnniw")

[node name="Fish_4" type="RigidBody3D" parent="."]
transform = Transform3D(0.541576, 0, -0.840652, 0, 1, 0, 0.840652, 0, 0.541576, 10.541, 4.2395, 2.43684)
mass = 4.0
script = ExtResource("3_ctpq8")
item_id = "fish"

[node name="MeshInstance3D" type="MeshInstance3D" parent="Fish_4"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, -1.5, 0)
material_override = SubResource("StandardMaterial3D_1d6vt")
mesh = SubResource("PrismMesh_ls1ci")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Fish_4"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.77636e-15, 0, 1, 0, -1.5, 0)
shape = SubResource("BoxShape3D_fnniw")

[node name="Cake_1" type="RigidBody3D" parent="."]
transform = Transform3D(0.541576, 0, -0.840652, 0, 1, 0, 0.840652, 0, 0.541576, -5.79182, 4.2395, -0.741801)
mass = 4.0
script = ExtResource("3_ctpq8")
item_id = "cake"

[node name="MeshInstance3D" type="MeshInstance3D" parent="Cake_1"]
material_override = SubResource("StandardMaterial3D_hywgi")
mesh = SubResource("TorusMesh_ai0to")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Cake_1"]
transform = Transform3D(2, 0, 1.07945e-07, 0, 0.25, 0, -1.07945e-07, 0, 2, 0, 0, 0)
shape = SubResource("CylinderShape3D_kb0wj")

[node name="Cake_2" type="RigidBody3D" parent="."]
transform = Transform3D(0.541576, 0, -0.840652, 0, 1, 0, 0.840652, 0, 0.541576, -4.08327, 4.2395, 1.53166)
mass = 4.0
script = ExtResource("3_ctpq8")
item_id = "cake"

[node name="MeshInstance3D" type="MeshInstance3D" parent="Cake_2"]
material_override = SubResource("StandardMaterial3D_lybqf")
mesh = SubResource("TorusMesh_ai0to")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Cake_2"]
transform = Transform3D(2, 0, 1.07945e-07, 0, 0.25, 0, -1.07945e-07, 0, 2, 0, 0, 0)
shape = SubResource("CylinderShape3D_kb0wj")

[node name="Cake_3" type="RigidBody3D" parent="."]
transform = Transform3D(0.541576, 0, -0.840652, 0, 1, 0, 0.840652, 0, 0.541576, -2.65116, 4.2395, -0.741801)
mass = 4.0
script = ExtResource("3_ctpq8")
item_id = "cake"

[node name="MeshInstance3D" type="MeshInstance3D" parent="Cake_3"]
material_override = SubResource("StandardMaterial3D_3ukbj")
mesh = SubResource("TorusMesh_ai0to")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Cake_3"]
transform = Transform3D(2, 0, 1.07945e-07, 0, 0.25, 0, -1.07945e-07, 0, 2, 0, 0, 0)
shape = SubResource("CylinderShape3D_kb0wj")

[node name="Cake_4" type="RigidBody3D" parent="."]
transform = Transform3D(0.541576, 0, -0.840652, 0, 1, 0, 0.840652, 0, 0.541576, -3.67386, 5.77738, -0.0442109)
mass = 4.0
script = ExtResource("3_ctpq8")
item_id = "cake"

[node name="MeshInstance3D" type="MeshInstance3D" parent="Cake_4"]
material_override = SubResource("StandardMaterial3D_lauq3")
mesh = SubResource("TorusMesh_ai0to")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Cake_4"]
transform = Transform3D(2, 0, 1.07945e-07, 0, 0.25, 0, -1.07945e-07, 0, 2, 0, 0, 0)
shape = SubResource("CylinderShape3D_kb0wj")
